--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dexie": "^4.2.1",
     "docxtemplater": "^3.66.2",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.540.0",
