--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "idmsystem",
   "private": true,
   "version": "0.0.0",
+  "main": "electron/main.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm run dev:electron",
+    "dev:renderer": "vite",
+    "dev:main": "wait-on http://localhost:5173 && cross-env VITE_DEV_SERVER_URL=http://localhost:5173 electron .",
+    "dev:electron": "concurrently -k \"npm:dev:renderer\" \"npm:dev:main\"",
     "build": "vite build",
+    "build:electron": "npm run build && electron-builder",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -64,11 +69,38 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "concurrently": "^9.0.1",
+    "cross-env": "^7.0.3",
+    "electron": "^33.2.0",
+    "electron-builder": "^25.1.8",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "tw-animate-css": "^1.3.7",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "wait-on": "^7.2.0"
+  },
+  "build": {
+    "appId": "com.idmsystem.desktop",
+    "productName": "IDM System",
+    "files": [
+      "dist/**/*",
+      "electron/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "build"
+    },
+    "mac": {
+      "target": ["dmg", "zip"]
+    },
+    "win": {
+      "target": ["nsis", "zip"]
+    },
+    "linux": {
+      "target": ["AppImage", "tar.gz"],
+      "category": "Development"
+    }
   }
 }
